parent 60728d89ad251fdf0b15824b2e15bf838c7f95af author Simon Demaziere <simon.demaziere@insee.fr> 1705593850 +0100 committer Simon Demaziere <simon.demaziere@insee.fr> 1719218708 +0200
chore: move from javax.persistence to jakarta.persistence package

wip: for CVE evaluation

chore: remove cyclic dependencies, migrate tests to mockMvc

chore: external services props handling
remove unused files
remove basic auth mode

fix: clean/update jar dependencies

feat: log4j -> logback

- going from log4j to logback
- add log interceptor to log all requests to endpoints

ci: upgrade dependencies

- upgrade github actions dependencies
- build with JAVA 21
- Upgrade docker container

refactor: :wrench: reduce boilerplate with Lombok and remove dead code

fix: 🐛 WIP endpoint role mapping

add security constraint on endpoints

refactor: 🔧 Lombok > boilerplate

use Lombok annotations for getters/setters/constructors

refactor: 🔧 lombok et minor refactor

lombok annotations, dead code removal, minor syntax readability

feat: add security infrastructure (#157)

- remove public urls
- add security to infrastructure package, api package is not coupled with spring security anymore
- refactor authentication properties
- add a default authenticated user when oidc is disabled
- remove useless check on user id
- gitignore application profile configurations

refactor: 🔥 removen unused Validation annotation

refactor: ♻️ & 🧪